# doffice

./: .drone.yml  .gitignore  Cargo.toml  Makefile  README.md  build.rs  package-lock.json  package.json
.docs/: demos.html  examples.html  index.html
.docs/examples/: intro-demo.html
docs/: demos.md  index.md  tutorial.html
docs_src/: index.md  tutorial.md
docs_src/examples/: intro-demo.md
examples/: test.html
examples/calc/: table.csv
examples/show/: anim.md  demo.md  ppt.md  theme.css
scripts/: build-themes.js
src/: main.rs
src/calc/: mod.rs  operators.rs  reader.rs
src/calc/engine/: ast.rs  cell.rs  eval.rs  expression_parser.rs  mod.rs
src/doc/: markdown_printer.rs  markdown_render.rs  mod.rs
src/doc/res/: template.hbs
src/framework/: mod.rs
src/html/: mod.rs
src/html/res/: slides.hbs  table.hbs
src/show/: mod.rs
src/show/res/: template.hbs
