[package]
name = "doffice"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
logos = "0.12.0"
pulldown-cmark = { version = "0.9.1", default-features = false }
