[package]
name = "doffice"
version = "0.1.4"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
logos = "0.12.0"
pulldown-cmark = { version = "0.9.1", default-features = false }
handlebars = "4"
tiny_http = "0.11.0"
notify = "4"
base64 = "0.13.0"
regex = { version = "1.5.5", features = ["pattern"] }
syntect = "5.0.0"
klask = { version = "1.0.0", optional = true }

[features]
ui = ["dep:klask"]
